--- a/Cotizacion.html
+++ b/Cotizacion.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="section seccion-opcional" id="jaula-specs-1">
-            <h3 class="section-title">Especificaciones Generales (Jaula)</h3>
+            <h3 class="section-title">Especificaciones Generales</h3>
             <table class="info-table">
                 <tr><td>Color Primario:</td><td><span id="jaula-colorPrimario"></span></td></tr>
                 <tr><td>Color Secundario:</td><td><span id="jaula-colorSecundario"></span></td></tr>
@@ -55,7 +55,7 @@
             </table>
         </div>
         <div class="section seccion-opcional" id="jaula-specs-2">
-            <h3 class="section-title">Carrocería y Estructura (Jaula)</h3>
+            <h3 class="section-title">Carrocería y Estructura</h3>
             <table class="info-table">
                 <tr><td>Dimensiones:</td><td><span id="jaula-dimensiones"></span></td></tr>
                 <tr><td>Tipo de Redila:</td><td><span id="jaula-tipoRedila"></span></td></tr>
@@ -76,7 +76,7 @@
             </table>
         </div>
         <div class="section seccion-opcional" id="jaula-accesorios">
-            <h3 class="section-title">Accesorios (Jaula)</h3>
+            <h3 class="section-title">Accesorios</h3>
             <table class="info-table">
                 <tr><td>Rines:</td><td><span id="jaula-rines"></span> (<span id="jaula-cantRines"></span> piezas)</td></tr>
                 <tr><td>Llantas:</td><td><span id="jaula-llantas"></span> (<span id="jaula-cantLlantas"></span> piezas)</td></tr>
@@ -92,7 +92,7 @@
         </div>
 
         <div class="section seccion-opcional" id="dolly-specs">
-            <h3 class="section-title">Especificaciones de la Unidad (Dolly)</h3>
+            <h3 class="section-title">Especificaciones de la Unidad</h3>
             <table class="info-table">
                 <tr><td>Color Primario:</td><td><span id="dolly-colorPrimario"></span></td></tr>
                 <tr><td>Color Secundario:</td><td><span id="dolly-colorSecundario"></span></td></tr>
@@ -106,7 +106,7 @@
             </table>
         </div>
         <div class="section seccion-opcional" id="dolly-accesorios">
-            <h3 class="section-title">Accesorios (Dolly)</h3>
+            <h3 class="section-title">Accesorios</h3>
             <table class="info-table">
                 <tr><td>Rines:</td><td><span id="dolly-rines"></span> (<span id="dolly-cantRines"></span> piezas)</td></tr>
                 <tr><td>Llantas:</td><td><span id="dolly-llantas"></span> (<span id="dolly-cantLlantas"></span> piezas)</td></tr>
@@ -230,7 +230,7 @@
                 });
             }
 
-            // 3. Llenar TODOS los campos posibles. Solo se verán los de las secciones activas.
+            // 3. Llenar TODOS los campos posibles.
             const fields = {
                 // Jaula
                 'jaula-colorPrimario': 'color', 'jaula-colorSecundario': 'color_2', 'jaula-suspension': 'suspension',
