Add accesorios section to orden.html

--- a/orden.html
+++ b/orden.html
@@ -76,6 +76,24 @@
                 <td><div class="field-label">PISO LAMINADO:</div><div class="field-value"><span id="pisoLaminado"></span></div></td>
             </tr>
         </table>
+        <table class="main-content accesorios-section">
+            <tr><td class="section-header" colspan="2"><strong>Accesorios</strong></td></tr>
+            <tr>
+                <td>
+                    <div class="field-label">SISTEMA DE INFLADO PSI:</div><div class="field-value"><span id="sistemaInflado"></span></div>
+                    <div class="field-label">LODERAS DELANTERA:</div><div class="field-value"><span id="loderaDelantera"></span></div>
+                    <div class="field-label">LODERAS TRASERA:</div><div class="field-value"><span id="loderaTrasera"></span></div>
+                    <div class="field-label">LUZ PLACA:</div><div class="field-value"><span id="luzPlaca"></span></div>
+                    <div class="field-label">RINES:</div><div class="field-value"><span id="rines"></span></div>
+                </td>
+                <td>
+                    <div class="field-label">CANTIDAD DE RINES:</div><div class="field-value"><span id="cantRines"></span></div>
+                    <div class="field-label">LLANTAS:</div><div class="field-value"><span id="llantas"></span></div>
+                    <div class="field-label">CANTIDAD DE LLANTAS:</div><div class="field-value"><span id="cantLlantas"></span></div>
+                    <div class="field-label">FRENOS:</div><div class="field-value"><span id="frenos"></span></div>
+                </td>
+            </tr>
+        </table>
     </div>
 
     <div id="seccion-dolly" class="unit-section">
